# exercise

./: add.c  bash-script.sh  csv.c  dsafs.py  file.txt  main.py  ransac.ipynb  test.py  writeFile.c
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
CoffeeManagement/: CMakeLists.txt  main.c
CoffeeManagement/include/: data.h  main.h
CoffeeManagement/utils/: admin.c  order.c
SystemProgramming/: .ch1_2.c.swp  Makefile  ch1_1.c  ch1_2.c  ch1_2.out  ch1_3_addnum.c  ch1_3_main.c  ch1_4.c  ch1_5.c  ch1_6.c  ch1_7.c
SystemProgramming/output/: ch1_1  ch1_2  ch1_4  ch1_5  ch1_6  ch1_7
c-tcp/: client.c  server.c
c-tcp/output/: client  server
c-udp/: client.c  server.c
c-udp/output/: client  server
c100/: a078_fileCopy.c  a079_fileSize.c  a080_fileCopy.c  studentRecord.c
c100/output/: a078_fileCopy  a079_fileSize  a080_fileCopy  studentRecord  studentRecord.txt  test.txt  text_copy.txt
ctypes-tutorial/: build.sh  clibrary.c  ctypes_tutorial.py
custom/othermodule/: second.py
ex-logging/: ex_logging.py
legacy/: AddrTest.c  arg-ex.py  dsafs.py  ex.py  ransac.ipynb  shm.c  tmp.json
logging_bin/: main.py  writeFile.c
output/: AddrTest  csv  student.csv  tmp
parse-json/: default.json  json.c  json.h  main.c
